update for success run

--- a/src/OpenLoyalty/Component/Translation/Infrastructure/Persistence/Doctrine/ORM/Language.orm.yml
+++ b/src/OpenLoyalty/Component/Translation/Infrastructure/Persistence/Doctrine/ORM/Language.orm.yml
@@ -26,5 +26,6 @@ OpenLoyalty\Component\Translation\Domain\Language:
         default: 0
     updatedAt:
       type: datetime
+      nullable: true
       options:
-        default: 0
+        default: null
